--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,7 @@
 {
   "functions": {
-    "api/send-reminder.js": {
-      "runtime": "nodejs18.x"
-    },
-    "api/check-reminders.js": {
-      "runtime": "nodejs18.x"
+    "api/**/*.js": {
+      "runtime": "@vercel/node@3.0.7"
     }
   },
   "crons": [
