--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
   "functions": {
-    "api/**/*.js": {
-      "runtime": "@vercel/node@2.15.10"
-    }
+    "api/**/*.js": {}
   },
   "crons": [
     {
